fix: improve contrast for disabled toggle buttons

--- a/apps/app/src/react/styles/group.scss
+++ b/apps/app/src/react/styles/group.scss
@@ -19,7 +19,7 @@
 
 		&:hover {
 			.MuiToggleButton-sizeSmall:not(.Mui-selected) {
-				opacity: 0.2;
+				opacity: 0.4;
 			}
 		}
 
