--- a/apps/app/src/react/styles/part.scss
+++ b/apps/app/src/react/styles/part.scss
@@ -35,7 +35,7 @@
 
 	&:hover {
 		.MuiToggleButton-sizeSmall:not(.Mui-selected) {
-			opacity: 0.2;
+			opacity: 0.4;
 		}
 	}
 
